# cpp-7z-api-sample

./: .gitignore  ArchiveFactory.cpp  ArchiveFactory.h  ArchiveProperties.cpp  ArchiveProperties.h  CMakeLists.txt  CMakePresets.json  ExportGUID.cpp  ExportGUID.h  Facade7z.cpp  Facade7z.h  InMemoryArchive.cpp  InMemoryArchive.h  InMemoryArchiveOpenCallback.cpp  InMemoryArchiveOpenCallback.h  InMemoryArchiveUpdateCallback.cpp  InMemoryArchiveUpdateCallback.h  InMemoryExtractCallback.cpp  InMemoryExtractCallback.h  InMemoryFileSystem.cpp  InMemoryFileSystem.h  InMemoryInStream.cpp  InMemoryInStream.h  InMemoryOutStream.cpp  InMemoryOutStream.h  StdFileInStream.cpp  StdFileInStream.h  main.cpp  vcpkg.json
